# aegisscan

./: .env.example  CODE_HIGHLIGHTS.md  CODE_SAMPLES.txt  COMPLETION_REPORT.md  DB_LAYER_SUMMARY.md  DELIVERABLES.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.md  FILES_CREATED.txt  FILES_SUMMARY.md  FILE_INDEX.md  GUIDE.md  IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_REPORT.txt  IMPLEMENTATION_SUMMARY.txt  INDEX.md  PRESENTATION.md  PROJECT_SUMMARY.txt  QUICK_REFERENCE.md  README.md  README_DATABASE_LAYER.md  README_REPORT_MODULE.md  README_SCANNER.md  README_WEB_UI.md  REPORT_GENERATOR_INDEX.md  REPORT_MODULE_REFERENCE.md  SCANNER_IMPLEMENTATION.md  USAGE_EXAMPLES.py  WEB_UI_REFERENCE.md  aegisscan.db  pyproject.toml  report_2.html  report_3.html  requirements.txt  setup.py
_old_aegisscan/: aegisscan.db  cli.py  config.py
_old_aegisscan/analysis/: diff_analyzer.py  risk_scorer.py
_old_aegisscan/db/: database.py  models.py
_old_aegisscan/enrichment/: __init__.py
_old_aegisscan/importer/: __init__.py  nmap_importer.py
_old_aegisscan/scanner/: __init__.py  connect_scanner.py  models.py  rate_limiter.py  syn_scanner.py
_old_aegisscan/web/: __init__.py
aegisscan/: __init__.py  main.py
aegisscan/analysis/: __init__.py
aegisscan/db/: __init__.py
aegisscan/enrichment/: banner_grabber.py  tls_inspector.py
aegisscan/report/: __init__.py  generator.py
aegisscan/web/: app.py  routes.py
reports/: demo_report.html  full_report.html  report.html  report2.html  run1_report.html  test_cve_report.html  test_web_report.html
src/aegisscan.egg-info/: PKG-INFO  (+4 more)
(+29 files in other folders)
